RESOLVED FIXED158765
Regression(r201534): Compile time greatly regressed
https://bugs.webkit.org/show_bug.cgi?id=158765
Summary Regression(r201534): Compile time greatly regressed
Chris Dumez
Reported 2016-06-14 16:36:35 PDT
Compile time greatly regressed by r201534 due to Document.h now including TextAutoSizing.h.
Attachments
Patch (5.04 KB, patch)
2016-06-14 16:46 PDT, Chris Dumez
no flags
Patch (5.09 KB, patch)
2016-06-14 16:58 PDT, Chris Dumez
no flags
Patch (5.52 KB, patch)
2016-06-14 17:01 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-06-14 16:36:55 PDT
Chris Dumez
Comment 2 2016-06-14 16:46:52 PDT
Chris Dumez
Comment 3 2016-06-14 16:58:53 PDT
Chris Dumez
Comment 4 2016-06-14 17:01:14 PDT
Chris Dumez
Comment 5 2016-06-14 18:24:23 PDT
Comment on attachment 281300 [details] Patch Clearing flags on attachment: 281300 Committed r202076: <http://trac.webkit.org/changeset/202076>
Chris Dumez
Comment 6 2016-06-14 18:24:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.