Regression(r201534): Compile time greatly regressed https://bugs.webkit.org/show_bug.cgi?id=158765 <rdar://problem/26587342>

Reviewed by Darin Adler.

Compile time greatly regressed by r201534 due to Document.h now including
TextAutoSizing.h. Move the TextAutoSizingTraits back to Document.h to
restore pre-r201534 behavior.

* WebCore.xcodeproj/project.pbxproj:
* dom/Document.cpp:
(WebCore::TextAutoSizingTraits::constructDeletedValue):
(WebCore::TextAutoSizingTraits::isDeletedValue):
* dom/Document.h:
* rendering/TextAutoSizing.h:
(WebCore::TextAutoSizingTraits::constructDeletedValue): Deleted.
(WebCore::TextAutoSizingTraits::isDeletedValue): Deleted.

Canonical link: https://commits.webkit.org/176855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202076 268f45cc-cd09-0410-ab3c-d52691b4dbfc